name:                hlinear-example
version:             0.1.0.0
synopsis:            Example code using the HLinear library
description:         Please see README.md
homepage:            https://github.com/aghitza/hlinear-example#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexandru Ghitza
maintainer:          aghitza@alum.mit.edu
copyright:           2016 Alexandru Ghitza
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hlinear
  default-language:    Haskell2010

executable hlinear-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlinear-example
  default-language:    Haskell2010

test-suite hlinear-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hlinear-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aghitza/hlinear-example
